--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Spring_BlogAPI
+spring.application.name=BlogAPI
 spring.datasource.url=jdbc:mysql://localhost:3306/postcommentdb
 spring.datasource.username=***
 Spring.datasource.password=***
